# microdectalk

./: .gitignore  Makefile  README.md  compile-armv8.sh  compile.sh  epsonapi.h  format.sh  main.c  main.cpp  out.txt  say  test.cpp
App/app/: build.gradle  dectalk  google-services.json
MicroDectalk/: build.gradle  settings.gradle
MicroDectalk/app/: build.gradle
MicroDectalk/app/src/main/: AndroidManifest.xml
MicroDectalk/app/src/main/res/layout/: activity_main.xml  cards.xml  settings_overlay.xml
include/: cmdp.h  config.h  epsonapi.h  kernel.h  ltsp.h  maindict.h  par_pars1.c  phdefs.h  php.h  pipe.h  port.h  vismprat.h  vtm_ip.h  vtmtabli.h
include/dtk/: l_sp_ph.h  ttsapi.h
platform/: android_bindings.cpp  compile-android.sh  compile-linux.sh  compile-pico.sh  compile-web.sh  index.html  linux_bindings.c  wav.c  web_bindings.cpp
platform/App/app/: build.gradle
platform/App/gradle/wrapper/: gradle-wrapper.properties
platform/rpi-pico/: CMakeLists.txt
platform/rpi-pico/src/: main.c
src/: cmd_cmd.c  cmd_main.c  cmd_pars.c  cmd_ph.c  cmd_tpre.c  epsonapi.c  kernserv.c  ls1.c  ls7.c  ls_ntype.c  lsdic.c  lsmain.c  lsmath.c  lssuff.c  main.c  main.cpp  maindict.c  p_us_rom_dectalk_1996m_43f.c  phclause.c  phdrawt0.c  phmain.c  phsettar.c  phtiming.c  phvdef.c  phvset.c  playtone.c  say.c  spc.c  vocal_tract.c  vtm_i.c  vtm_io.c
src/dtk/: cm_text.c  cmd_main.c  cmd_pars.c  cmd_tpre.c  dict.c  disable_audio.c  epsonapi.c  ls1.c  ls2.c  ls4.c  ls5.c  ls7.c  lshomo.c  lsmain.c  lssuff.c  lsw_main.c  maindict.c  phclause.c  phdrawt0.c  phram.c  phrom.c  phvset.c  simulatordata.c  usa_main.c  userdict.c  vtm_i.c
(+23 files in other folders)
